Code and feature-set updated

--- a/ORIGA/ORIGA-Glaucoma-Ensemble-Approach.ipynb
+++ b/ORIGA/ORIGA-Glaucoma-Ensemble-Approach.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv (\"/home/achirangshu/Desktop/Glaucoma-non-Glaucoma-Final/Glaucoma-non-Glaucoma-Final/Fundus/100_fundas_extracted_features.csv\", header=None)"
+    "data = pd.read_csv ('100_ORIGA_extracted_features.csv', header=None)"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = np.array(data.iloc[:,range(1,101)])\n",
+    "df = np.array(data.iloc[:,range(1,data.shape[1])])\n",
     "y = data.iloc[:,0]"
    ]
   },
@@ -425,6 +425,26 @@
    ],
    "source": [
     "print ( \"classes are : \" , np.unique ( y ) )  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "84333bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Glaucoma class numbers: 336\n",
+      "Non Glaucoma class numbers: 964\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Glaucoma class numbers:',len(y[y==1])) # patients having Glaucoma\n",
+    "print('Non Glaucoma class numbers:',len(y[y==0])) #patients having non glaucoma"
    ]
   },
   {
