--- a/REFUGE/Refuge-Glaucoma-Ensemble-Approach.ipynb
+++ b/REFUGE/Refuge-Glaucoma-Ensemble-Approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "a8c5b67d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "329e4021",
    "metadata": {},
    "outputs": [],
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "05a0caa9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv (\"/home/achirangshu/Desktop/Glaucoma-non-Glaucoma-Final/Glaucoma-non-Glaucoma-Final/Refuge/100_refuge_extracted_features.csv\", header=None)"
+    "data = pd.read_csv ('100_refuge_extracted_features.csv', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "72ee2587",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "[400 rows x 101 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,18 +411,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "247ccf49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = np.array(data.iloc[:,range(1,101)])\n",
+    "df = np.array(data.iloc[:,range(1,data.shape[1])])\n",
     "y = data.iloc[:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "ff69b8b2",
    "metadata": {},
    "outputs": [
@@ -436,6 +436,26 @@
    ],
    "source": [
     "print ( \"classes are : \" , np.unique ( y ) )  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "212881e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non Glaucoma Class frequency: 360\n",
+      "Glaucoma Class frequency: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Non Glaucoma Class frequency:',len(y[y==0]))\n",
+    "print('Glaucoma Class frequency:',len(y[y==1]))"
    ]
   },
   {
